deps/v8/test/message/fail/modules-cycle1.out
*%(basename)s:7: SyntaxError: Detected cycle while resolving name 'a' in 'modules-cycle1.js'
import {a} from "modules-cycle1.js";
        ^
SyntaxError: Detected cycle while resolving name 'a' in 'modules-cycle1.js'

